objects/Gift_Code_History__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Gift Code History</relationshipLabel>
        <relationshipName>Gift_Code_History</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Applied_On__c</fullName>
        <label>Applied On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Campaign_Id__c</fullName>
        <label>Campaign Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gift_Code_End_Date__c</fullName>
        <label>Gift Code End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gift_Code_Start_Date__c</fullName>
        <label>Gift Code Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_Of_Periods__c</fullName>
        <label>Number Of Periods</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Gift Code History</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Applied_On__c</columns>
        <columns>Campaign_Id__c</columns>
        <columns>Gift_Code_Start_Date__c</columns>
        <columns>Gift_Code_End_Date__c</columns>
        <columns>Number_Of_Periods__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_GB</language>
    </listViews>
    <nameField>
        <label>Gift Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Gift Code History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>